tree-sitter/tree-sitter-woowoo/corpus/block/meta_block/end_of_block_in_the_middle_of_an_object.txt
==================
End of block in the middle of an object (meta)
==================
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
%%
%% Integrace
%%
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%

.Chapter Primitivní funkce a neurčitý integrál
  label: chap_primitivni_funkce


.Remark:

  Algoritmy pro výčet primitivních funkcí, resp. neurčitých integrálů, existují.
  Jako příklad zmiňme "Rischův algoritmus"@1 (1968).
  Tyto algoritmy jsou ale většinou nevhodné pro použití lidmi, zvláště v prvních stádiích studia této problematiky (kompletní popis Rischova algoritmu zabírá více než 100 stránek textu).
    1:
      link: https://en.wikipedia.org/wiki/Risch_algorithm


  V dalších částech této kapitoly budeme studovat i sofistikovanější metody výpočtu, než v podstatě uhodnutí prezentované v této podkapitole.
  Konkrétně metody integrace pomocí "substituce".emphasize a "per partes".emphasize.
  I tak ale tyto metody vyžadují jistý vhled, myšlenku, nejsou čistě mechanické jako tomu je u derivování.


---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (object
        (object_type )
        (block
          (text_block
            (text )
            (text )
            (verbose_inner_environment
              (verbose_inner_environment_at
                (verbose_inner_environment_body
                  (text ))
                (verbose_inner_environment_at_type )))
            (text )
            (text )
            (meta_block )))
        (block
          (text_block
            (text )
            (text )
            (verbose_inner_environment
              (verbose_inner_environment_classic
                (verbose_inner_environment_body
                  (text ))
                (verbose_inner_environment_type )))
            (text )
            (verbose_inner_environment
              (verbose_inner_environment_classic
                (verbose_inner_environment_body
                  (text ))
                (verbose_inner_environment_type )))
            (text )
            (text )))))))
