tree-sitter/tree-sitter-woowoo/corpus/block/meta_block/non_trivial.txt
==================
A text-block with non-trivial meta block
==================
.Section Primitivní funkce
  label: sec_primitivni_funkce

Nejprve zavedeme pojem primitivní funkce.


.Definition:
  title: Primitivní funkce
  english: Antiderivative
  label: def_primitivni

  Nechť $f$ je funkce definovaná na intervalu $(a,b)$, kde $-\infty \leq a < b \leq +\infty$.
  Funkci $F$ splňující podmínku

    F^\prime(x) = f(x) \ \text{pro každé} \ x \in (a,b)

  nazýváme "primitivní funkcí".notion.1 k funkci $f$ na intervalu $(a,b)$.
    1:
      index:
        - funkce!primitivní
        - antiderivace


---
(source_file
      (document_part
        (document_part_type)
        (document_part_title)
        (meta_block)
        (document_part_body
          (block
            (text_block
              (text)))
          (object
            (object_type)
            (meta_block)
            (block
              (text_block
                (text)
                (math_environment
                  (math_environment_body))
                (text)
                (math_environment
                  (math_environment_body))
                (text)
                (math_environment
                  (math_environment_body))
                (text)
                (text)
                (math_environment
                  (math_environment_body))
                (text))
              (implicit_outer_environment
                (block
                  (text_block
                    (text))))
              (text_block
                (text)
                (verbose_inner_environment
                  (verbose_inner_environment_classic
                    (verbose_inner_environment_body
                      (text))
                    (verbose_inner_environment_type)
                    (verbose_inner_environment_meta)))
                (text)
                (math_environment
                  (math_environment_body))
                (text)
                (math_environment
                  (math_environment_body))
                (text)
                (meta_block)))))))
