tree-sitter/tree-sitter-woowoo/corpus/comments/end_of_the_file.txt
==================
Comments at the end of the file
==================
.Chapter Reálná čísla
  label: chap-prolog


V tomto kurzu předpokládáme, že čtenář je již seznámen se základními způsoby zadání množin (výčtem, vlastností), množinovými operacemi (průnik, sjednocení, rozdíl a doplněk) a orientuje se mezi číselnými množinami (přirozená, celá, racionální a reálná čísla -- těm se ale v této kapitole budeme věnovat znovu a podrobněji).
Dále na straně čtenáře předpokládáme znalost vlastností elementárních funkcí (polynomiální, racionální, mocninné, exponenciální, logaritmické a trigonometrické).
V neposlední řadě též vyžadujeme znalost základních kombinatorických vztahů, to jest definici a kombinatorický význam faktoriálu, kombinačního čísla či znalost binomické věty.
Z předchozího studia také vyžadujeme znalost zobrazení a souvisejících pojmů.
Pro pohodlí čtenáře a pro zafixování notace tuto poslední partii látky stručně shrnujeme v Kapitole .reference:chap-dodatek-zobrazeni.

%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
%%
%% Konec kapitoly: Reálná čísla (test)
%%
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text )
          (text )
          (text )
          (text )
          (text )
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (text ))))))
