tree-sitter/tree-sitter-woowoo/corpus/comments/text_vs_comments.txt
==================
Text vs Comments recognition
==================
.Section Sekce 1


This is text. %%%
%%%% This is comment
This is second line of the same text block.

Another text block.
%%

%%
Another text block.
%

%

%
Another BLOCK.

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (document_part_body
      (block
        (text_block
          (text )
          (text ))
        (text_block
          (text ))
        (text_block
          (text )))
      (block
        (text_block
          (text ))))))
