tree-sitter/tree-sitter-woowoo/corpus/document_part/docparts_no_meta.txt
==================
Multiple document parts per document
==================
.Section Sekce 1


Obsah sekce 1.


.Subsection Subsekce 1


Obsah subsekce 1.





.Subsection Subsekce 2


"inner".env
---
(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (document_part_body
      (block
        (text_block
          (text )))))
  (document_part
    (document_part_type )
    (document_part_title )
    (document_part_body
      (block
        (text_block
          (text )))))
  (document_part
    (document_part_type )
    (document_part_title )
    (document_part_body
      (block
        (text_block
          (verbose_inner_environment
            (verbose_inner_environment_classic
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type ))))))))
