tree-sitter/tree-sitter-woowoo/corpus/document_part/multiple_parts.txt
==================
Multiple document parts per document
==================
.Section Sekce 1
  - meta sekce 1


Obsah sekce 1.


.Subsection Subsekce 1
  - meta subsekce


Obsah subsekce 1.
---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text )))))
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text ))))))
