tree-sitter/tree-sitter-woowoo/corpus/inner_environment/meta/classic_meta.txt
==================
Inner environment with meta
==================
.Chapter Test
  label: meta-inner


"beautiful page".reference.1
  1:
    url: 'link'

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (verbose_inner_environment
            (verbose_inner_environment_classic
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type )
              (verbose_inner_environment_meta )))
          (meta_block ))))))
