tree-sitter/tree-sitter-woowoo/corpus/inner_environment/meta/dot_but_not_meta.txt
==================
Inner environment with dot after type, but NOT meta
==================
.Chapter Test
  label: meta-inner


The last word of this sentence is "bold".bold. This is another sentence.

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text )
          (verbose_inner_environment
            (verbose_inner_environment_classic
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type )))
          (text ))))))
