tree-sitter/tree-sitter-woowoo/corpus/inner_environment/short-form/not_short_inner.txt
==================
This IS NOT Short inner environment
==================
.Chapter Test
  label: not-short-inner


This .should. not be .recognize as .inner..environment. :absolutely. not.
n.: ..: .kkk.: dew
Later, it should be discussed whether a textblock can start with a short inner. Leads to a lot of problems.

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text )
          (text )
          (text ))))))
