tree-sitter/tree-sitter-woowoo/corpus/inner_environment/shorthands/delimiter_#.txt
==================
Shorthanded inner environment - # ending
==================
.Chapter Test
  label: shorthanded-inner


What will follow is a shorthanded version of an inner environment. "Object link"#object-name
"Another object link"#another-object-name

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text )
          (verbose_inner_environment
            (verbose_inner_environment_hashtag
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type )))
          (verbose_inner_environment
            (verbose_inner_environment_hashtag
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type ))))))))
