tree-sitter/tree-sitter-woowoo/corpus/newline/LF.txt
==================
CR Newlines in: Empty docpart followed by another docpart
==================
.Chapter Výroková logika


.Section Úvod k matematické logice
  label: sec_0201_uvod_log


text

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title ))
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (text_block
          (text ))))))
