tree-sitter/tree-sitter-woowoo/corpus/object/object_with_implicit_last.txt
==================
Object - with block that has implicit outer as last element
==================
.Chapter Výroková logika


.Example:
  label: exa_podformule_strom
  title: Podformule a formační strom

  Určíme všechny podformule a formačním stromem znázorníme, jak z nich byla postupně sestavena formule $\neg(A \wedge B) \Leftrightarrow (C \Rightarrow A)$.


  Podformule formule $\neg(A \wedge B) \Leftrightarrow (C \Rightarrow A)$ jsou:
